--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "Ultimate-KA-Bot",
   "description": "A bot that uses an oauth grant to securely log people in and connect Khan Academy to Discord in an immersive way.",
-  "version": "0.1.4",
+  "version": "0.1.8",
   "dependencies": {
     "discord.js": "latest",
     "fs": "latest",
     "request": "latest",
     "oauth-1-client": "latest",
     "express": "latest",
-    "ejs": "latest"
+    "ejs": "latest",
+    "js-levenshtein": "latest"
   }
 }
