--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ultimate-KA-Bot",
   "description": "A bot that uses an oauth grant to securely log people in and connect Khan Academy to Discord in an immersive way.",
-  "version": "0.4.0",
+  "version": "1.0.0",
   "dependencies": {
     "discord.js": "latest",
     "ejs": "latest",
@@ -10,6 +10,7 @@
     "js-levenshtein": "latest",
     "oauth-1-client": "latest",
     "pg": "^7.4.3",
+    "readline": "^1.3.0",
     "request": "latest"
   },
   "devDependencies": {
