--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "Ultimate-KA-Bot",
   "description": "A bot that uses an oauth grant to securely log people in and connect Khan Academy to Discord in an immersive way.",
-  "version": "1.4.3",
+  "version": "1.5.5",
   "dependencies": {
     "discord.js": "latest",
     "ejs": "latest",
     "express": "latest",
     "fs": "latest",
     "js-levenshtein": "latest",
+    "node-time-ago": "^1.0.0",
     "oauth-1-client": "latest",
     "pg": "^7.4.3",
     "readline": "^1.3.0",
